Fix z-index issue

--- a/app/styles/ember-arcgis-portal-components.scss
+++ b/app/styles/ember-arcgis-portal-components.scss
@@ -124,7 +124,7 @@ div.panel-body:has(.item-picker) {
   .item-picker-current-item {
     // This is styling for the drawer that
     // holds the metadata for the item
-    z-index: 2;
+    z-index: 3;
     padding: 15px;
     position: absolute;
     top: 0;
